--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Risu4DB
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v3">docs</a> will be your guide.
-  </p>
-</ion-content>
+<ion-tabs>
+  
+    <ion-tab tabIcon="ios-keypad" tabTitle="Menu Principal"[root]="mPrincipal"></ion-tab> 
+    <ion-tab tabIcon="md-link" tabTitle="Ingresar conexion"[root]="iConexion"></ion-tab>
+    <ion-tab tabIcon="ios-browsers"tabTitle="Menu conexiones"[root]="mConexiones">Conexiones</ion-tab>
+    <ion-tab tabIcon="ios-book" tabTitle="Menu tablas"[root]="mTablas">Tablas</ion-tab>
+ 
+</ion-tabs>
