--- a/src/pages/i-conexion/i-conexion.html
+++ b/src/pages/i-conexion/i-conexion.html
@@ -15,34 +15,34 @@
     <ion-row>
     <ion-col col-12>
         <ion-label >Nombre Conexion</ion-label>
-        <ion-input type="text" class="input"></ion-input>  
+        <ion-input type="text" class="input" [(ngModel)]="datosConexion.nombre"></ion-input>  
     </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-7>
         <ion-label >Host/Direccion IP</ion-label>
-        <ion-input type="text" ></ion-input>
+        <ion-input type="text" class="input" [(ngModel)]="datosConexion.host"></ion-input>
       </ion-col>
       <ion-col col-14>
         <ion-label >Puerto</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" class="input" [(ngModel)]="datosConexion.puerto"></ion-input>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-12>
           <ion-label >Usuario</ion-label>
-          <ion-input type="text" ></ion-input>  
+          <ion-input type="text" class="input" [(ngModel)]="datosConexion.usuario"></ion-input>  
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-12>
           <ion-label >Contraseña</ion-label>
-          <ion-input type="text" ></ion-input>  
+          <ion-input type="text" class="input" [(ngModel)]="datosConexion.contrasena"></ion-input>  
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6>
-        <button ion-button round >Probar Conexion</button>
+        <button ion-button round (click)="probarConexion()">Probar Conexion</button>
       </ion-col>
       <ion-row>
         <ion-col col-6>
