--- a/src/pages/m-conexiones/m-conexiones.html
+++ b/src/pages/m-conexiones/m-conexiones.html
@@ -13,58 +13,20 @@
 <ion-content padding>
   <h1>Desliza hacia la izquierda para ver las opciones</h1> 
   <ion-list>
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor="let item of items">
       <ion-item>
         <ion-avatar item-start>
           <img src="../../assets/imgs/conexion.png">
         </ion-avatar>
-        <h2>Nombre Conexion</h2>
-        <p>Direccion IP: 192.168.1.1</p>
+        <h2>{{item.nombre}}</h2>
+        <p>Direccion IP: {{item.host}}</p>
       </ion-item>
         <ion-item-options side="right">
-        <button ion-button color="secondary">
+        <button ion-button color="secondary" (click)="conexionHost(item)">
           <ion-icon name="md-wifi"></ion-icon>
           Conectar
         </button>
-        <button ion-button color="danger">
-          <ion-icon name="md-trash"></ion-icon>
-          Borrar
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="../../assets/imgs/conexion.png">
-        </ion-avatar>
-        <h2>Nombre Conexion</h2>
-        <p>Direccion IP: 192.168.1.1</p>
-      </ion-item>
-        <ion-item-options side="right">
-        <button ion-button color="secondary">
-          <ion-icon name="md-wifi"></ion-icon>
-          Conectar
-        </button>
-        <button ion-button color="danger">
-          <ion-icon name="md-trash"></ion-icon>
-          Borrar
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="../../assets/imgs/conexion.png">
-        </ion-avatar>
-        <h2>Nombre Conexion</h2>
-        <p>Direccion IP: 192.168.1.1</p>
-      </ion-item>
-        <ion-item-options side="right">
-        <button ion-button color="secondary">
-          <ion-icon name="md-wifi"></ion-icon>
-          Conectar
-        </button>
-        <button ion-button color="danger">
+        <button ion-button color="danger" (click)="borrarConexion(item)">
           <ion-icon name="md-trash"></ion-icon>
           Borrar
         </button>
