--- a/src/pages/mprincipal/mprincipal.html
+++ b/src/pages/mprincipal/mprincipal.html
@@ -9,13 +9,16 @@
     <ion-title>Risu4DB</ion-title>
   </ion-navbar>
 </ion-header>
-
+<!-- Pagina principal -->
   <ion-content>
-    <div class="texto">
-      <p class="titulo">Bienvenido al asistente de consultas de bases de datos</p>
-
-      <p class="creditos">Desarrollado por Rodrigo Solís Avila y Elias Garcia Aguilar </p>
-    </div>
+    <ion-grid fixed>
+      <ion-row>  
+        <div class="texto">
+          <p class="titulo">Bienvenido al asistente de consultas de bases de datos</p>
+          <p class="creditos">Desarrollado por Rodrigo Solís Avila y Elias Garcia Aguilar </p>
+        </div>
+      </ion-row> 
+  </ion-grid>
     
   </ion-content>
 
