--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
+    <ion-title fixed class="titulo">
       Risu4DB
     </ion-title>
   </ion-navbar>
@@ -8,9 +8,9 @@
 
 <ion-tabs>
   
-    <ion-tab tabIcon="ios-keypad" tabTitle="Menu Principal"[root]="mPrincipal"></ion-tab> 
-    <ion-tab tabIcon="md-link" tabTitle="Ingresar conexion"[root]="iConexion"></ion-tab>
-    <ion-tab tabIcon="ios-browsers"tabTitle="Menu conexiones"[root]="mConexiones">Conexiones</ion-tab>
-    <ion-tab tabIcon="ios-book" tabTitle="Menu tablas"[root]="mTablas">Tablas</ion-tab>
+    <ion-tab tabIcon="ios-keypad" tabTitle="Menu Principal"[root]="mPrincipal" ></ion-tab> 
+    <ion-tab tabIcon="md-link" tabTitle="Ingresar conexion"[root]="iConexion" ></ion-tab>
+    <ion-tab tabIcon="ios-browsers"tabTitle="Menu conexiones"[root]="mConexiones" >Conexiones</ion-tab>
+    <ion-tab tabIcon="ios-book" tabTitle="Menu tablas"[root]="mTablas" >Tablas</ion-tab>
  
 </ion-tabs>
