--- a/src/pages/i-conexion/i-conexion.html
+++ b/src/pages/i-conexion/i-conexion.html
@@ -4,51 +4,51 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<!-- Pagina base de la aplicacion -->
 <ion-header>
   <ion-navbar>
-    <ion-title>IConexion</ion-title>
+    <ion-title fixed>IConexion</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding-center>
-  <ion-grid>
+  <ion-grid fixed>
     <ion-row>
-    <ion-col col-12>
+      <!-- Formulario para ingresar la informacio requerida para iniciar sesion en la base de datos -->
+    <ion-col col-lg-12>
         <ion-label >Nombre Conexion</ion-label>
         <ion-input type="text" class="input" [(ngModel)]="datosConexion.nombre"></ion-input>  
     </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-7>
+      <ion-col col-lg-9 col-sm-12 col-md-6>
         <ion-label >Host/Direccion IP</ion-label>
         <ion-input type="text" class="input" [(ngModel)]="datosConexion.host"></ion-input>
       </ion-col>
-      <ion-col col-14>
+      <ion-col col-lg-3 col-sm-12 col-md-6>
         <ion-label >Puerto</ion-label>
         <ion-input type="text" class="input" [(ngModel)]="datosConexion.puerto"></ion-input>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>
+      <ion-col col-lg-6 col-sm-12 col-md-6>
           <ion-label >Usuario</ion-label>
           <ion-input type="text" class="input" [(ngModel)]="datosConexion.usuario"></ion-input>  
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-12>
+      <ion-col col-lg-6 col-sm-12 col-md-6>
           <ion-label >Contraseña</ion-label>
           <ion-input type="text" class="input" [(ngModel)]="datosConexion.contrasena"></ion-input>  
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-6>
+      <ion-col col-lg-6 col-sm-12 col-md-12>
+        <!-- Boton para llamar al metodo probarConexion -->
         <button ion-button round (click)="probarConexion()">Probar Conexion</button>
       </ion-col>
-      <ion-row>
-        <ion-col col-6>
+        <ion-col col-lg-6 col-sm-12 col-md-12>
+          <!-- Boton para llamar al metodo guardarConexion -->
           <button ion-button color="secondary" round (click)="guardarConexion()">Aceptar</button> 
         </ion-col>
-      </ion-row>
     </ion-row>
   </ion-grid>
 </ion-content>
