menu generador CRUD

--- a/src/pages/m-tablas/m-tablas.html
+++ b/src/pages/m-tablas/m-tablas.html
@@ -31,7 +31,7 @@
               </ion-item>
               <ion-item-options side="right">
                 <!-- Llama al metodo Consultar -->
-            <button ion-button color="primary">
+            <button ion-button color="primary" (click)="dbActual(item)">
               <ion-icon name="md-help"></ion-icon>
               Consultar 
             </button>
